--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,7 @@
 
   <properties>
     <arq.version>2.8.5</arq.version>
+    <tdb.version>0.8.7</tdb.version>
     <jdk.version>1.6</jdk.version>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
@@ -36,7 +37,15 @@
       <artifactId>arq</artifactId>
       <version>${arq.version}</version>
     </dependency>
-    
+
+<!--
+    <dependency>
+      <groupId>org.apache.lucene</groupId>
+      <artifactId>lucene-core</artifactId>
+      <version>2.9.3</version>
+    </dependency>
+-->
+
     <dependency>
       <groupId>org.slf4j</groupId>
       <artifactId>slf4j-log4j12</artifactId>
@@ -56,6 +65,12 @@
       <version>${arq.version}</version>
       <type>test-jar</type>
       <scope>test</scope>
+    </dependency>
+
+    <dependency>
+      <groupId>com.hp.hpl.jena</groupId>
+      <artifactId>tdb</artifactId>
+      <version>${tdb.version}</version>
     </dependency>
 
   </dependencies>
