--- a/.classpath
+++ b/.classpath
@@ -2,6 +2,7 @@
   <classpathentry kind="src" path="src/test/java" including="**/*.java"/>
   <classpathentry kind="src" path="src/test/resources" excluding="**/*.java"/>
   <classpathentry kind="src" path="src/main/java" including="**/*.java"/>
+  <classpathentry kind="src" path="src/main/resources" excluding="**/*.java"/>
   <classpathentry kind="output" path="target/classes-eclipse"/>
   <classpathentry kind="var" path="M2_REPO/com/hp/hpl/jena/arq/2.8.5/arq-2.8.5.jar" sourcepath="M2_REPO/com/hp/hpl/jena/arq/2.8.5/arq-2.8.5-sources.jar"/>
   <classpathentry kind="var" path="M2_REPO/com/hp/hpl/jena/arq/2.8.5/arq-2.8.5-sources.jar"/>
@@ -20,7 +21,7 @@
   <classpathentry kind="var" path="M2_REPO/junit/junit/4.8.1/junit-4.8.1.jar" sourcepath="M2_REPO/junit/junit/4.8.1/junit-4.8.1-sources.jar"/>
   <classpathentry kind="var" path="M2_REPO/log4j/log4j/1.2.16/log4j-1.2.16.jar" sourcepath="M2_REPO/log4j/log4j/1.2.16/log4j-1.2.16-sources.jar"/>
   <classpathentry kind="var" path="M2_REPO/org/apache/lucene/lucene-core/2.9.3/lucene-core-2.9.3.jar" sourcepath="M2_REPO/org/apache/lucene/lucene-core/2.9.3/lucene-core-2.9.3-sources.jar"/>
-  <classpathentry kind="var" path="M2_REPO/org/slf4j/slf4j-api/1.5.8/slf4j-api-1.5.8.jar" sourcepath="M2_REPO/org/slf4j/slf4j-api/1.5.8/slf4j-api-1.5.8-sources.jar"/>
+  <classpathentry kind="var" path="M2_REPO/org/slf4j/slf4j-api/1.6.1/slf4j-api-1.6.1.jar" sourcepath="M2_REPO/org/slf4j/slf4j-api/1.6.1/slf4j-api-1.6.1-sources.jar"/>
   <classpathentry kind="var" path="M2_REPO/org/slf4j/slf4j-log4j12/1.6.1/slf4j-log4j12-1.6.1.jar" sourcepath="M2_REPO/org/slf4j/slf4j-log4j12/1.6.1/slf4j-log4j12-1.6.1-sources.jar"/>
   <classpathentry kind="var" path="M2_REPO/stax/stax-api/1.0.1/stax-api-1.0.1.jar"/>
   <classpathentry kind="var" path="M2_REPO/com/hp/hpl/jena/tdb/0.8.7/tdb-0.8.7.jar" sourcepath="M2_REPO/com/hp/hpl/jena/tdb/0.8.7/tdb-0.8.7-sources.jar"/>
